# dotfiles

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  biome.json  bootstrap  bootstrap.sh  bun.lockb  chromium.Makefile  chromium.md  install.sh  macOS.Makefile  package.json  revealfile-test.ts  tsconfig.json
Casks/: gg.rb
Formula/: add-biome.rb  appiconify.rb  audio.rb  avif.rb  bun-roll.rb  chromium-bisect-builds.rb  civ6-auto-resolution.rb  dmgify.rb  eject-all-cards.rb  ffpoll.rb  fix-disk-names-macos.rb  flacify.rb  gclone.rb  gg-refresh.rb  git-distance.rb  git-freeze.rb  hevc.rb  is-macos-screen-locked.rb  jclone.rb  lstow.rb  maestral-dbx.rb  mak.rb  mp3ify.rb  naughty-list-auto.rb  naughty-list.rb  niceplz.rb  node_crunchule.rb  npm-cost.rb  npm-roll.rb  open-macos.rb  openscad-auto.rb  openscad-lsp-topiary.rb  pack.rb  portkill.rb  pushover.rb  repo.rb  resize.rb  reveal-macos.rb  reveal-sd-card-backup-dcim.rb  rmbranch.rb  (+30 more)
bootstrap/: install-git-commands  install-lgarron-scripts  install-mak
chromium/: chromium.gyp_env
exported/: Novel-lgarron.itermcolors  RectangleConfig.json  TEControl BBC2 defaults.tec  better-touch-tool-window-management.bttpreset  better-touch-tool-window-management.json  better-touch-tool.settings
home/: .emacs  .gitconfig  .zshrc  Xmodmap  atea  bash_profile  gitconfig  lgcrontab  tarsnaprc  zshrc
iTerm/: com.googlecode.iterm2.plist
keybindings/: eclipse_keybindings.epf
repo-script/: README.md  build-ts-scripts.impl.ts  build-ts-scripts.ts  test-scripts.ts  vscode-snippets-update-scad-filaments.ts
(+436 files in other folders)
